--- a/helm/templates/frontenddep.yaml
+++ b/helm/templates/frontenddep.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -23,3 +24,4 @@ spec:
             memory: 100Mi
         ports:
         - containerPort: 80
+{{ end }}
