--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -8,7 +8,7 @@ spec:
     matchLabels:
       app: redis
       role: master
-  replicas: {{ .Values.replicas }}
+  replicas: {{ .Values.replicas | default 5 }}
   template:
     metadata:
       labels:
